--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,34 @@
 body {
     font-family: sans-serif;
+    background-color: black;
+    color: whitesmoke;
 }
 
 .hidden {
     display: none;
+}
+
+#number {
+    width: 100px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
+button {
+    border-radius: 5px;
+    border: none;
+    padding: 4px;
+    font-size: 13px;
+}
+
+p#result {
+    font-size: 25px;
+    font-weight: bold;
+    color: rgb(121, 121, 166);
+}
+
+span#new-sentence {
+    font-size: 18px;
+    font-weight: 200;
+    color: rgb(160, 157, 59);
 }
