--- a/css/styles.css
+++ b/css/styles.css
@@ -32,13 +32,29 @@ p#result {
 span#new-sentence {
     font-size: 18px;
     font-weight: 200;
-    color: rgb(160, 157, 59);
+    color: rgb(249, 249, 244);
     margin-bottom: 10px;
 }
 
 div#result-container {
+    position: relative;
     margin: 75px;
     border: 2px solid rgb(121, 121, 166);
     border-radius: 30px;
     padding: 15px;
+}
+
+div#result-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/img/mr_rogers_robot.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.3;
+    z-index: -1;
 }
