Almost fix the response background dark/light mode switch

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,14 @@ body {
     color: black;
 }
 
+.dark-mode-div {
+    color: whitesmoke;
+}
+
+.light-mode-div {
+    color: black;
+}
+
 .hidden {
     display: none;
 }
