--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,16 @@ body {
     text-align: center;
 }
 
+h1 {
+    margin: 50px;
+    font-size: 60px;
+}
+
+h2 {
+    margin: 50px;
+    font-size: 30px;
+}
+
 .dark-mode {
     background-color: black;
     color: whitesmoke;
@@ -39,6 +49,7 @@ body {
 
 #number {
     width: 100px;
+    height: 30px;
     margin-bottom: 10px;
     margin-right: 10px;
 }
@@ -46,26 +57,35 @@ body {
 div#input-container {
     margin-top: 20px;
     padding: 5px;
+    font-size: 20px;
 }
 
 div#buttons {
-    border: 2px solid rgb(121, 121, 166);
+    border: none;
     padding: 4px;
     display: inline-block;
     margin: 10px;
     background-color: rgb(139, 119, 139);
+    border-radius: 15px;
 }
 
 button {
     border-radius: 5px;
     border: none;
-    padding: 5px;
-    margin: 8px;
-    font-size: 13px;
+    box-shadow: inset 0 0 10px rgb(121, 121, 166);
+    padding: 5px 10px;
+    margin: 10px;
+    font-size: 15px;
+}
+
+.submit-button {
+    padding: 11px;
+    font-size: 17px;
 }
 
 p#result {
     font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     padding: 10px;
 }
